Fix header z-index

--- a/src/App.css
+++ b/src/App.css
@@ -23,7 +23,7 @@ header {
   display: grid;
   grid-template-columns: 1fr 3fr 1fr;
   align-items: center;
-  z-index: 3;
+  z-index: 4;
 }
 
 header > a {
